Whitespace fix

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -136,7 +136,7 @@ p, a {
         width: 100%;
         display: flex;
         align-items: center;
-        height: 150px;
+        height: 200px;
 
         .links {
             flex: 1;
@@ -155,13 +155,14 @@ p, a {
                     a {
                         text-decoration: none;
                         color: #333;
-                        font-size: 16px;
+                        font-size: 18px;
                     }
                 }
             }
         }
 
         p {
+            display: none;
             font-size: 34px;
             font-weight: bold;
             margin-right: 10px;
@@ -237,6 +238,7 @@ p, a {
     text-align: center;
     font-size: 28px;
     line-height: 40px;
+    margin-top: 10px;
 }
 
 .landing-btns {
@@ -245,7 +247,7 @@ p, a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 100px;
     z-index: 5;
     flex-direction: column;
 
